--- a/client/app/about/aboutcreator.html
+++ b/client/app/about/aboutcreator.html
@@ -2,7 +2,7 @@
 <div class="container-fluid animated fadeIn no-gutter">
 <h1 style="  font-size: 150px;
   text-align: center;
-  background: url(http://420placehold.it/ocean/1000-600) fixed;
+  background: url('{{backgroundImgUrl}}') fixed;
   -webkit-text-fill-color: transparent;
   text-fill-color: transparent;
   -webkit-background-clip: text;
