--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,63 +1,74 @@
 <div class="container-fluid no-gutter" ng-controller="LandingCtrl" style="position:relative; overflow: hidden; margin-top: -40px;">
-  <img class="hidden-xs" ng-src="/assets/images/lake.jpg" alt="" du-parallax y="background"  style="width:100%; position: relative;"/>
+  <img class="hidden-xs" ng-src="/assets/images/lake-min.jpg" alt="" du-parallax y="background"  style="width:100%; position: relative;"/>
   <div class="visible-xs" style="height:370px; position:relative;">
     <i class="fa fa-chevron-down" style="position:absolute; bottom:0; right:47%;"></i>
   </div>
 
   <div style="position: absolute; left: 50%; z-index: 300; top:60px;">
-   <div id="mainTitle" class="animated fadeIn"style="position: relative; left: -50%;">
+    <div id="mainTitle" class="animated fadeIn" style="position: relative; left: -50%;">
      <h1>เพื่อนใจ</h1>
-     <h2 class="text-center" style="width:80%; margin:0 auto; display: block;">ชุมชนเพื่อเกื้อหนุนและพัฒนาจิตใจของกันและกัน</h1>
-     </div>
+     <h2 class="text-center" style="width:80%; margin:0 auto; display: block;">ชุมชนเพื่อเกื้อหนุนและพัฒนาจิตใจของกันและกัน</h2>
    </div>
-   <div style='position: relative;
-   background: white;
-   z-index: 1;
-   margin:0;
-   text-align: center;
-   min-height: 1000px;
-   ' class="animated slideInUp row" style="margin-right: 0; margin-left:0;">
-   <div class="col-md-8 triangleRight box" style="padding:50px;"ani-scroll="320">
-    <h1 style="font-size: 6em;">1. แบ่งบันปัญหาใจ</h1>
-    <p style='text-align: center; text-justify: inter-word; padding:15px;'>ไม่ว่าจะเป็นเรื่องอะไรที่ทําให้เราติดใจ เล็กหรือใหญ่;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
-  </div>
-  <div class="col-md-4"></div>
-  <div class="clearfix"></div>
-  <div class="col-md-4"></div>
-  <div class="col-md-8 triangleLeft box" style="padding:50px;" ani-scroll="820">
-    <h1 style="font-size: 6em;">2. ช่วยกันตอบปัญหาใจ</h1>
-    <p>;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
-  </div>
-  <div class="col-md-10 triangleRight box" style="padding:50px;" ani-scroll="1170">
-    <h1 style="font-size: 6em;">3. ได้เพื่อนใหม่ ได้คําตอบ และได้ทําให้โลกนี้อบอุ่นขึ้น</h1>
-    <p>;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
-  </div>
+ </div>
+
+ <div style='position: relative;
+ background: white;
+ z-index: 1;
+ margin:0;
+ text-align: center;
+ min-height: 1000px;
+ ' class="animated slideInUp row" style="margin-right: 0; margin-left:0;">
+ <div class="col-md-8 triangleRight box" style="padding:50px;"ani-scroll="320">
+  <h1 style="font-size: 6em;">1. แบ่งบันปัญหาใจ</h1>
+  <p style='text-align: center; text-justify: inter-word; padding:15px;'>ไม่ว่าจะเป็นเรื่องอะไรที่ทําให้เราติดใจ เล็กหรือใหญ่;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
+</div>
+<div class="col-md-4"></div>
+<div class="clearfix"></div>
+<div class="col-md-4"></div>
+<div class="col-md-8 triangleLeft box" style="padding:50px;" ani-scroll="820">
+  <h1 style="font-size: 6em;">2. ช่วยกันตอบปัญหาใจ</h1>
+  <p>;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
+</div>
+<div class="col-md-10 triangleRight box" style="padding:50px;" ani-scroll="1170">
+  <h1 style="font-size: 6em;">3. ได้เพื่อนใหม่ ได้คําตอบ และได้ทําให้โลกนี้อบอุ่นขึ้น</h1>
+  <p>;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
+</div>
 </div>
 
 <div style="position:relative;">  
   <div class="col-md-6 col-xs-6"></div>
-  <div class="col-md-6 col-xs-6 triangleLeft" style="  min-height: 100px;">
+  <div class="col-md-6 col-xs-6 triangleLeft" style="  min-height: 56px;"></div>
+  <div style="position:relative; padding-bottom: 50px;">      
+   <div id="landingJoinUs" style="position:relative; overflow:hidden;">
+   <!-- style="background:url('/assets/images/rocket-01.png'); background-size: cover;" -->
+      <div style="position:relative;">
+      <img ng-src="/assets/images/rocket-01.png" style="position:relative; z-index:-1; width:100%; position:absolute; z-index: -1; right:0;" du-parallax y="background">
+      </div>
+       <img ng-src="/assets/images/bigLogo.png" style="width:150px; margin-top: 40px;"><br>
+       มาเป็นส่วนร่วมกับเรา 
+       <!-- <i class="fa fa-heart red" style="font-size: 0.7em;" ng-class="shake"></i> -->
+       <a id="bigFB" class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
+        <i class="fa fa-facebook" style="color:white;"></i> Connect with Facebook
+      </a>
+      <p>หรือ</p>
+       <a id="bigFB" class="btn" ng-href="/login" style="border: 3px solid;
+    color: white; border-color: #428bca #428bca #FFF9AA #FFF9AB;">
+        <i class="fa fa-login" style="color:white;"></i> สมัครเป็นเพื่อนใจ
+      </a>
   </div>
-  <div style="position:relative; top:50px; padding-bottom: 50px;">      
-   <h1 id="landingJoinUs" ng-mouseover="shake='animated rubberBand'" ng-mouseleave="shake=''">
-     มาเป็นส่วนร่วมกับเรา <i class="fa fa-heart red" style="font-size: 0.7em;" ng-class="shake"></i>
-     <a id="bigFB" class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-      <i class="fa fa-facebook" style="color:white;"></i> Connect with Facebook
-    </a>
-  </div>
+</div>
 </div>
 
 <div class="clearfix"></div>
 
-<div class="container-fluid background-yellow" style="min-height: 420px;">
-  <carousel ng-show="userGroups" interval="4000" style="display:block; margin:0 auto; width:100%; margin-bottom: 50px; margin-top: 50px; padding: 0 12%;" disable-animation="true">
+<div ng-show="userGroups.length > 1" class="container-fluid background-yellow" style="min-height: 420px;">
+  <carousel interval="4000" style="display:block; margin:0 auto; width:100%; margin-bottom: 50px; margin-top: 50px; padding: 0 12%;" disable-animation="true">
     <slide ng-repeat="users in userGroups" class="animated fadeIn">
       <div class="row">
         <div ng-repeat="user in users"class="col-md-4">
           <div style="position:absolute: top:10px;">
-            <img class="img-circle" ng-src="{{user.coverimg}}" style="border: 3px solid #428bca;"/>
-            <p style="margin: 15px 0;"><i class="fa fa-quote-left pull-left"></i>
-{{user.reason}}</p>
+            <img class="img-circle" ng-src="{{user.coverimg}}" style="border: 3px solid #428bca; width:150px;"/>
+            <p style="margin: 15px 0;"><i class="fa fa-quote-left pull-left"></i>{{user.reason}}</p>
             <small>- {{user.username}}</small>
           </div>
         </div>
