--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -2,40 +2,6 @@
 <div class="container-fluid">
 
 	<div class="col-md-2">
-		<!-- <div ng-include="'components/sidebar/sideBanners2.html'"></div> -->
-
-<!-- 		<div class="panel panel-default panel-card">
-			<div class="panel-heading">
-				<img ng-cloak class="ng-cloak" ng-src="https://unsplash.imgix.net/12/barley.jpg?q=75&fm=jpg&s=f39de5ca1970a13dbe6af6c86b3c47ec" />
-				<button class="btn btn-primary btn-sm" role="button">Follow</button>
-			</div>
-			<div class="panel-figure">
-				<img class="img-responsive img-circle" ng-src="https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/73.jpg" />
-			</div>
-			<div class="panel-body text-center">
-				<h4 class="panel-header"><a href="https://twitter.com/maridlcrmn">@Maridlcrmn</a></h4>
-				<small>A short description goes here.</small>
-			</div>
-			<div class="panel-thumbnails">
-				<div class="row">
-					<div class="col-xs-4">
-						<div class="thumbnail">
-							<img ng-src="http://placemi.com/mzwlj/60x60" />
-						</div>
-					</div>
-					<div class="col-xs-4">
-						<div class="thumbnail">
-							<img ng-src="http://placemi.com/yboaj/60x60" />
-						</div>
-					</div>
-					<div class="col-xs-4">
-						<div class="thumbnail">
-							<img ng-src="http://placemi.com/gv3bp/60x60" />
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>  -->
 	</div>
 
 	<div ng-show="question" class="col-md-8" style="margin: 15px 0;">
@@ -123,7 +89,7 @@
 				<!-- <i class="fa fa-frown-o blue"></i> -->
 				<h2 style="text-align: center;">ยังไม่ได้ความช่วยเหลือ</h2>
 				<p>รู้จักคนที่สามารถช่วยเพื่อนใจได้ <span class="blue">ฝากแชร์การด้วยจ้า</span></p>
-				<a class="btn btn-facebook white" ng-click="shareFB('/questions/{{question._id}}')">
+				<a class="btn btn-facebook btn-lg white" ng-click="shareFB('/questions/{{question._id}}')">
 					<i class="fa fa-facebook white"></i> แชร์บน Facebook!
 				</a>
 				<hr style="width: 80%;"/>
