--- a/client/app/report/report.html
+++ b/client/app/report/report.html
@@ -53,7 +53,7 @@
 	  </div>
 
 	  <div ng-show="reports.length <= 0" class="text-center animated pulse">
-	      <h2 style="text-align: center;">เป็นคนแรกที่แจ้งปัญหาแกี่ยวกับเว็บไช</h2>
+	      <h2 style="text-align: center; margin: 50px 0;">เป็นคนแรกที่แจ้งปัญหาแกี่ยวกับเว็บไช</h2>
 	  </div>
 
 
