--- a/client/app/suggestion/suggestion.html
+++ b/client/app/suggestion/suggestion.html
@@ -54,7 +54,7 @@
 	  </div>
 
 	  <div ng-show="suggestions.length <= 0" class="text-center animated pulse">
-	      <h2 style="text-align: center;">เป็นคนแรกที่ให้คําแนะนํา</h2>
+	      <h2 style="text-align: center; margin: 50px 0;">เป็นคนแรกที่ให้คําแนะนํา</h2>
 	  </div>
 
 
