--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -2,22 +2,20 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
+    <div class="page-header">
+      <h1>เข้าสู่ระบบ</h1>
     </div>
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="login(form)" novalidate>
 
         <div class="form-group">
-          <label>Email</label>
+          <label>อีเมล - Email</label>
 
           <input type="email" name="email" class="form-control" ng-model="user.email" required>
         </div>
 
         <div class="form-group">
-          <label>Password</label>
+          <label>รหัสผ่าน - Password</label>
 
           <input type="password" name="password" class="form-control" ng-model="user.password" required>
         </div>
@@ -35,24 +33,24 @@
 
         <div>
           <button class="btn btn-success btn-lg btn-login" type="submit">
-            Login
+            เข้าสู่ระบบ
           </button>
           <a class="btn btn-default btn-lg btn-register" href="/signup">
-            Register
+            สมัครเป็นเพื่อนใจ
           </a>
         </div>
 
         <hr>
         <div>
-          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-            <i class="fa fa-facebook white"></i> Connect with Facebook
+          <a class="btn btn-facebook btn-lg" href="" ng-click="loginOauth('facebook')">
+            <i class="fa fa-facebook white"></i> เข้าระบบผ่าน Facebook
           </a>
-<!--           <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
+ <!--          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
             <i class="fa fa-google-plus"></i> Connect with Google+
-          </a>
-          <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
-            <i class="fa fa-twitter"></i> Connect with Twitter
           </a> -->
+          <a class="btn btn-twitter btn-lg" href="" ng-click="loginOauth('twitter')">
+            <i class="fa fa-twitter white"></i> เข้าระบบผ่าน Twitter
+          </a>
         </div>
       </form>
     </div>
