--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -2,12 +2,25 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
-      <h1>สมัครเป็นเพื่อนใจ</h1>
-    </div>
+    <div class="page-header">
+      <h1 style="font-size: 4em; text-align: center;">สมัครเป็นเพื่อนใจ</h1>
+      </div>
     <div class="col-sm-10 col-sm-offset-1">
       <form class="form" name="form" ng-submit="register(form)" novalidate>
-
+      <!-- <h1>สมัครผ่านเว็บอื่น</h1> -->
+      <div class="text-center">
+        <a class="btn btn-facebook btn-lg" href="" ng-click="loginOauth('facebook')">
+          <i class="fa fa-facebook white"></i> สมัครผ่าน Facebook
+        </a>
+   <!--      <a class="btn btn-google-plus btn-lg" href="" ng-click="loginOauth('google')">
+          <i class="fa fa-google-plus white"></i> สมัครผ่าน Google+
+        </a> -->
+        <a class="btn btn-twitter btn-lg" href="" ng-click="loginOauth('twitter')">
+          <i class="fa fa-twitter white"></i> สมัครผ่าน Twitter
+        </a>
+      </div>
+      <p style="color:#AAAAAA; text-align: center; margin:15px 0;">หรือสมัครกลับเพื่อนใจโดยกรอกใบสมัครด้านล่าง</p>
+        <!-- <h1>สมัครผ่านเว็บเพื่อนใจ</h1> -->
         <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
                                             'has-error': form.name.$invalid && submitted }">
           <label>ชื่อจริง</label>
@@ -99,26 +112,16 @@
         </div>
 
         <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Sign up
+          <button class="btn btn-inverse btn-lg btn-success" type="submit">
+            สมัครเป็นเพื่อนใจ
           </button>
           <a class="btn btn-default btn-lg btn-register" href="/login">
-            Login
+            เข้าสู่ระบบ
           </a>
         </div>
 
         <hr>
-        <div>
-          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-            <i class="fa fa-facebook"></i> Connect with Facebook
-          </a>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
-            <i class="fa fa-google-plus"></i> Connect with Google+
-          </a>
-          <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
-            <i class="fa fa-twitter"></i> Connect with Twitter
-          </a>
-        </div>
+
       </form>
     </div>
   </div>
