--- a/client/app/about/aboutcreator.html
+++ b/client/app/about/aboutcreator.html
@@ -41,117 +41,10 @@
 นี้คือการเดินทางเพื่อหาคําตอบโดยการเอาชีวิตเข้าแลก
 
 เป็นการก้าวเข้าไปสู่ความมืดที่มีแต่การเดินต่อไปในความมืดนั้นเท่านั้นที่จะพาเราไปถึงจุดหมาย</span>
-<!--   <a ng-href="https://www.facebook.com/%E0%B8%8A%E0%B8%B5%E0%B8%A7%E0%B8%B4%E0%B8%95%E0%B8%99%E0%B8%B5%E0%B9%89%E0%B8%82%E0%B8%AD%E0%B8%97%E0%B9%8D%E0%B8%B2%E0%B8%94%E0%B8%B5%E0%B9%81%E0%B8%A5%E0%B8%81%E0%B8%82%E0%B9%89%E0%B8%B2%E0%B8%A7-1585458785057329/notifications/"><h1 class="text-center" style="margin-bottom: 0;">- มารู้จักติดตามและให้กําลังใจกับชีวิตแปลกๆของผมกันต่อได้ที่นี้นะครับ -</h1></a> -->
+
   </h1>
 
-  <a ng-href="https://www.facebook.com/pages/%E0%B8%8A%E0%B8%B5%E0%B8%A7%E0%B8%B4%E0%B8%95%E0%B8%99%E0%B8%B5%E0%B9%89%E0%B8%82%E0%B8%AD%E0%B8%97%E0%B9%8D%E0%B8%B2%E0%B8%94%E0%B8%B5%E0%B9%81%E0%B8%A5%E0%B8%81%E0%B8%82%E0%B9%89%E0%B8%B2%E0%B8%A7/1585458785057329?fref=ts"style="background: linear-gradient(white, #fff9aa); font-size: 2em; width:80%; display:block; margin:15px auto; text-align: center; border:1px solid #dddddd; border-radius: 4px; padding:5px;">- มาเป็นเพื่อนและให้กําลังใจกับชีวิตแปลกๆของผมกันต่อได้ที่นี้นะครับ -</a>
+<!--   <a ng-href="https://www.facebook.com/pages/%E0%B8%8A%E0%B8%B5%E0%B8%A7%E0%B8%B4%E0%B8%95%E0%B8%99%E0%B8%B5%E0%B9%89%E0%B8%82%E0%B8%AD%E0%B8%97%E0%B9%8D%E0%B8%B2%E0%B8%94%E0%B8%B5%E0%B9%81%E0%B8%A5%E0%B8%81%E0%B8%82%E0%B9%89%E0%B8%B2%E0%B8%A7/1585458785057329?fref=ts"style="background: linear-gradient(white, #fff9aa); font-size: 2em; width:80%; display:block; margin:15px auto; text-align: center; border:1px solid #dddddd; border-radius: 4px; padding:5px;">- มาเป็นเพื่อนและให้กําลังใจกับชีวิตแปลกๆของผมกันต่อได้ที่นี้นะครับ -</a> -->
 
 
 </div>
-
-
-
-<!-- <div class="container wrap" ng-controller="AboutCreatorCtrl">
-  <h1 class="transLetter"style="  position: relative;
-  background: white;
-  z-index: 1;
-  padding: 200px 20px;
-  -webkit-text-fill-color: transparent;
-  text-fill-color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;">Bacon ipsum dolor sit amet sausage tail capicola ground round hamburger ham hock. Short ribs pig andouille meatball, pastrami tri-tip fatback ham hock shank kielbasa swine. Rump pancetta jerky kielbasa doner beef ribs tongue hamburger strip steak drumstick andouille shoulder shank flank. Swine drumstick meatball pig beef sausage strip steak.</h1>
-
-  <img src="http://lorempixel.com/1000/800/" alt="" du-parallax y="background"  style="width:100%;"/>
-
-  <h1 class="transLetter" style="  position: relative;
-  background: white;
-  z-index: 1;
-  padding: 200px 20px;
-  -webkit-text-fill-color: transparent;
-  text-fill-color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;">Bacon strip steak ground round, tongue pastrami short ribs pork chop venison turducken sausage sirloin. Flank chicken pork chop capicola turkey turducken cow pork loin biltong meatball drumstick pancetta filet mignon ground round fatback. Ham hock jerky short ribs brisket. Meatloaf shoulder pork chop capicola, sirloin swine pig pork. Jerky ribeye hamburger pork loin sirloin kevin bresaola boudin chuck flank. Ham hock pork belly chicken jerky rump bresaola.</h1>
-
-  <img src="http://lorempixel.com/1000/500/" alt="" du-parallax y="background"  style="width:100%;"/>
-
-  <h1 class="transLetter" style="  position: relative;
-  background: white;
-  z-index: 1;
-  padding: 200px 20px;
-  -webkit-text-fill-color: transparent;
-  text-fill-color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;">Shank fatback pastrami short loin, turkey jowl kielbasa ribeye chicken jerky drumstick flank ham. Swine shankle pork belly kielbasa shoulder flank jowl, sirloin doner. Kevin tri-tip bresaola leberkas. Swine ball tip cow strip steak. Ham filet mignon pork chop, pork fatback andouille pork loin shoulder jowl swine strip steak turducken prosciutto rump.</h1>
-
-  <img src="http://lorempixel.com/1000/500/" alt="" du-parallax y="background" style="width:100%;" />
-
-  <p class="transLetter" style="  position: relative;
-  background: white;
-  z-index: 1;
-  padding: 200px 20px;">Tongue tri-tip pastrami, shoulder rump pork belly ground round. Ham hock chuck leberkas doner, strip steak corned beef tri-tip capicola. Rump turkey ham sausage shankle. Flank shankle pork chop ham hock. Shankle venison kielbasa, pancetta swine beef ball tip t-bone bacon hamburger ground round ribeye flank. Turducken bacon bresaola, chicken kevin boudin ball tip strip steak filet mignon pork turkey shank ground round. Kielbasa fatback prosciutto pork chop, jerky ground round leberkas boudin ball tip beef shankle shoulder swine brisket.</p>
-
-  <img src="http://lorempixel.com/1000/600/" alt="" du-parallax y="background" style="width:100%;" />
-
-  <p class="transLetter" style="  position: relative;
-  background: white;
-  z-index: 1;
-  padding: 200px 20px;">Shoulder cow tenderloin chuck, pork chop jerky doner leberkas. Chuck sausage hamburger, kevin beef pork chop pork shoulder ground round ball tip turducken flank. Bresaola tri-tip meatloaf, salami venison tail pig shank shankle jowl sausage brisket cow biltong turducken. Swine turducken hamburger ball tip short loin prosciutto kevin jowl tri-tip. Doner meatloaf pork brisket.</p>
-</div> -->
-
-<!-- <div class="container">
-<div style="position:relative; overflow:hidden; margin-bottom:500px;">
-	<img parallax parallax-ratio="0.5" src="http://lorempixel.com/1400/1000" style="width: 100%; position:relative; z-index: -130;">
-
-	<h1 parallax parallax-ratio="-0.5" style=" position: relative;background: white; z-index: 0;">
-		สวัสดีครับผมชื่อนายศุภกร เลาหสงคราม ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ จิตใจที่ต้องการจะทําดีต่อผู้อื่นโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้ ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาการทําดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า
-
-		ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น
-
-		ผมเชื่อในความดี และอยากให้คนอื่นเช่นกันเชื่อมั่นในความดีของตนและทําในสิ่งนั้นแบบไม่กลัวตาย
-
-		ถ้าคนทําดีจริง จะต้องอยู่รอดได้ เพราะมันดีจริง
-
-		ผมตั่งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี คือ มีการเป็นอยู่ที่เนื่องอยู่ด้วยการให้ของผู้อื่น
-
-		ผมไม่รู้ว่าการเดิมพันครั่งนี้จะเป็นอย่างไร เรายังมีความหวังในมนุษยธรรมได้อยู่ไหม ความดีมันกินไม่ได้จริงหรือเปล่า หรือว่าในที่สุดแล้วความดีไม่มีค่าอะไรในสังคมเท่าสิ่งที่จับต้องได้
-
-		นี้คือการเดินทางเพื่อหาคําตอบโดยการเอาชีวิตเป็นตัวทดลอง
-
-		เป็นการก้าวเข้าไปสู่ความมืด ที่มีแต่การเดินต่อไปในความมืดนั้นเท่านั้นที่จะพาเราไปถึงจุดหมาย
-
-	</h1>
-	<img parallax parallax-ratio="-1.2" src="http://lorempixel.com/1400/1000/sports" style="width: 100%; position:relative; z-index: -1;" >
-	<h1 style=" position: relative;background: white; z-index: 2;">
-		สวัสดีครับผมชื่อนายศุภกร เลาหสงคราม ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ จิตใจที่ต้องการจะทําดีต่อผู้อื่นโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้ ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาการทําดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า
-
-		ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น
-
-		ผมเชื่อในความดี และอยากให้คนอื่นเช่นกันเชื่อมั่นในความดีของตนและทําในสิ่งนั้นแบบไม่กลัวตาย
-
-		ถ้าคนทําดีจริง จะต้องอยู่รอดได้ เพราะมันดีจริง
-
-		ผมตั่งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี คือ มีการเป็นอยู่ที่เนื่องอยู่ด้วยการให้ของผู้อื่น
-
-		ผมไม่รู้ว่าการเดิมพันครั่งนี้จะเป็นอย่างไร เรายังมีความหวังในมนุษยธรรมได้อยู่ไหม ความดีมันกินไม่ได้จริงหรือเปล่า หรือว่าในที่สุดแล้วความดีไม่มีค่าอะไรในสังคมเท่าสิ่งที่จับต้องได้
-
-		นี้คือการเดินทางเพื่อหาคําตอบโดยการเอาชีวิตเป็นตัวทดลอง
-
-		เป็นการก้าวเข้าไปสู่ความมืด ที่มีแต่การเดินต่อไปในความมืดนั้นเท่านั้นที่จะพาเราไปถึงจุดหมาย
-
-	</h1>
-
-
-	<p class="lead" style="position:absolute; background: white;">
-	sdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjf
-	sdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjf
-	sdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjf
-
-
-	</p>
-	<p class="lead" style="background: white;">
-sdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjfsdkfjklsdjfl;skdajf;adsfjlasdjf
-
-	</p> -->
-
-<!-- </div>
-</div> -->
