--- a/client/app/contact/contact.html
+++ b/client/app/contact/contact.html
@@ -1,7 +1,7 @@
 <view-title>ติดต่อ -</view-title>
 <div class="container animated fadeIn">
 	<div class="page-header">
-	  <h1 style="font-size: 4em;">ติดต่อเรา <small>ยินดีพูดคุยและรับฟังทุกเรื่องครับ</small></h1>
+	  <h1>ติดต่อเรา <small>ยินดีพูดคุยและรับฟังทุกเรื่องครับ</small></h1>
 	</div>
 
 	<div>
@@ -38,6 +38,6 @@
 	
 	<h1>แผนที่</h1>
 
-	<iframe style="display:block; margin:0 auto; border:0"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3874.0221662184417!2d100.61355510000004!3d13.837707499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29d6470e38889%3A0xf79e049c38208cfa!2s59%2F127+Prasert+Manukit+Rd%2C+Khwaeng+Chorakhe+Bua%2C+Khet+Lat+Phrao%2C+Krung+Thep+Maha+Nakhon+10230%2C+Thailand!5e0!3m2!1sen!2s!4v1429166685659" width="600" height="600" frameborder="0"></iframe>
+	<iframe style="display:block; margin:15px auto; border:0"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3874.0221662184417!2d100.61355510000004!3d13.837707499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29d6470e38889%3A0xf79e049c38208cfa!2s59%2F127+Prasert+Manukit+Rd%2C+Khwaeng+Chorakhe+Bua%2C+Khet+Lat+Phrao%2C+Krung+Thep+Maha+Nakhon+10230%2C+Thailand!5e0!3m2!1sen!2s!4v1429166685659" width="600" height="600" frameborder="0"></iframe>
 
 </div>
