--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,13 +1,16 @@
-<div class="container-fluid no-gutter" ng-controller="LandingCtrl" style="position:relative; overflow: hidden; margin-top: -40px;">
+<div class="container-fluid no-gutter" ng-controller="LandingCtrl" style="position:relative; overflow: hidden;">
   <img class="hidden-xs" ng-src="/assets/images/lake-min.jpg" alt="" du-parallax y="background"  style="width:100%; position: relative;"/>
   <div class="visible-xs" style="height:370px; position:relative;">
     <i class="fa fa-chevron-down" style="position:absolute; bottom:0; right:47%;"></i>
   </div>
 
-  <div style="position: absolute; left: 50%; z-index: 300; top:60px;">
-    <div id="mainTitle" class="animated fadeIn" style="position: relative; left: -50%;">
-     <h1>เพื่อนใจ</h1>
-     <h2 class="text-center" style="width:80%; margin:0 auto; display: block;">ชุมชนเพื่อเกื้อหนุนและพัฒนาจิตใจของกันและกัน</h2>
+  <div style="position: absolute; left: 50%; z-index: 300; top:35px;">
+    <div id="mainTitle" class="animated fadeIn white text-shadow" style="position: relative; left: -50%;">
+     <h1 class="" style="margin:0;">เพื่อนใจ</h1>
+     <h2 class="text-center" style="width:80%; margin:0 auto; display: block; margin-top: -30px;">ชุมชนเพื่อเกื้อหนุนและพัฒนาจิตใจของกันและกัน</h2>
+        <a id="bigFB" class="btn text-shadow puanjaiBorder" ng-href="/login" style="margin-top: 30px; padding:4px 10px">
+         <i class="fa fa-login" style="color:white;"></i>เข้าสู่หน้าหลัก
+       </a>
    </div>
  </div>
 
@@ -18,7 +21,7 @@
  text-align: center;
  min-height: 1000px;
  ' class="animated slideInUp row" style="margin-right: 0; margin-left:0;">
- <div class="col-md-8 triangleRight box" style="padding:50px;"ani-scroll="320">
+ <div class="col-md-8 triangleRight box" style="padding:50px;"ani-scroll="300">
   <h1 style="font-size: 6em;">1. แบ่งบันปัญหาใจ</h1>
   <p style='text-align: center; text-justify: inter-word; padding:15px;'>ไม่ว่าจะเป็นเรื่องอะไรที่ทําให้เราติดใจ เล็กหรือใหญ่;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj;ldsjfl;dsakjf;sajfd;ajas;fjas;fjds;ajfadkls;fj</p>
 </div>
@@ -35,7 +38,7 @@
 </div>
 </div>
 
-<div style="position:relative;">  
+<div class="animated fadeIn" style="position:relative;" ani-view>  
   <div class="col-md-6 col-xs-6"></div>
   <div class="col-md-6 col-xs-6 triangleLeft" style="  min-height: 56px;"></div>
   <div style="position:relative; padding-bottom: 50px;">      
@@ -45,14 +48,12 @@
       <img ng-src="/assets/images/rocket-01.png" style="position:relative; z-index:-1; width:100%; position:absolute; z-index: -1; right:0;" du-parallax y="background">
       </div>
        <img ng-src="/assets/images/bigLogo.png" style="width:150px; margin-top: 40px;"><br>
-       มาเป็นส่วนร่วมกับเรา 
+       มาเป็นส่วนร่วมกับเรา
        <!-- <i class="fa fa-heart red" style="font-size: 0.7em;" ng-class="shake"></i> -->
        <a id="bigFB" class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-        <i class="fa fa-facebook" style="color:white;"></i> Connect with Facebook
-      </a>
+        <i class="fa fa-facebook" style="color:white;"></i> สมัครผ่าน Facebook</a>
       <p>หรือ</p>
-       <a id="bigFB" class="btn" ng-href="/login" style="border: 3px solid;
-    color: white; border-color: #428bca #428bca #FFF9AA #FFF9AB;">
+       <a id="bigFB" class="btn puanjaiBorder" ng-href="/login">
         <i class="fa fa-login" style="color:white;"></i> สมัครเป็นเพื่อนใจ
       </a>
   </div>
@@ -67,9 +68,9 @@
       <div class="row">
         <div ng-repeat="user in users"class="col-md-4">
           <div style="position:absolute: top:10px;">
-            <img class="img-circle" ng-src="{{user.coverimg}}" style="border: 3px solid #428bca; width:150px;"/>
+            <img class="img-circle" ng-src="{{user.coverimg}}" style="border: 2px solid #428bca; width:150px;"/>
             <p style="margin: 15px 0;"><i class="fa fa-quote-left pull-left"></i>{{user.reason}}</p>
-            <small>- {{user.username}}</small>
+            <small class="blue">- {{user.username}}</small>
           </div>
         </div>
       </div>
