--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="page-header">
+    <div class="page-header text-center">
       <h1>เข้าสู่ระบบ</h1>
     </div>
     <div class="col-sm-12">
