--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="page-header">
-      <h1 style="font-size: 4em; text-align: center;">สมัครเป็นเพื่อนใจ</h1>
+      <h1 class="text-center">สมัครเป็นเพื่อนใจ</h1>
       </div>
     <div class="col-sm-10 col-sm-offset-1">
       <form class="form" name="form" ng-submit="register(form)" novalidate>
