--- a/client/app/suggestion/suggestion.html
+++ b/client/app/suggestion/suggestion.html
@@ -2,7 +2,7 @@
 <div class="container">
 
 	<div class="page-header">
-	  <h1>แนะนําและเสนอไอเดียให้เพื่อนใจ <small>ยินดีรับฟังความคิดเห็นของทุกคนครับ</small></h1>
+	  <h1>แนะนําและเสนอไอเดียให้เพื่อนใจ<br><small>ยินดีรับฟังความคิดเห็นของทุกคนครับ</small></h1>
 	</div>
 
 	<div class="panel panel-info">
