--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -8,7 +8,7 @@
     <div id="mainTitle" class="animated fadeIn white text-shadow" style="position: relative; left: -50%;">
      <h1 class="" style="margin:0;">เพื่อนใจ</h1>
      <h2 class="text-center" style="width:80%; margin:0 auto; display: block; margin-top: -30px;">ชุมชนเพื่อเกื้อหนุนและพัฒนาจิตใจของกันและกัน</h2>
-        <a id="bigFB" class="btn text-shadow puanjaiBorder" ng-href="/login" style="margin-top: 30px; padding:4px 10px">
+        <a id="bigFB" class="btn text-shadow puanjaiBorder" ng-href="/main" style="margin-top: 30px; padding:4px 10px">
          <i class="fa fa-login" style="color:white;"></i>เข้าสู่หน้าหลัก
        </a>
    </div>
